--- a/ClassWay/index.html
+++ b/ClassWay/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="assets/images/logo.png" type="image/x-icon">
   
   <link rel="stylesheet" href="style.css">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-hm14kNnttOoGhWNzacMFZdnL-gVLYL0&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
 </head>
 <body>
 
